--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- Please refer to index.php for how I connected the form to database -->
+<!-- Please refer to addform.php for how I connected the form to database -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Please refer to addform.php for how I connected the form to database -->
     <main>
         <section>
             <form action="" method="POST">
@@ -30,3 +31,5 @@
     </main>
 </body>
 </html>
+
+<!-- Please refer to addform.php for how I connected the form to database -->
