--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Please refer to addform.php for how I connected the form to database -->
     <main>
         <section>
-            <form action="" method="POST">
+            <form action="index.html" method="POST">
                 <h1>Simple Form</h1>
                 <div class="form-group">
                     <label for="name">Name:</label>
